# narana

./: .env.example  .gitignore  pyproject.toml
app/: chunk.py  config.py  crud.py  embed.py  feeder.py  libgen.py  retriever.py  setup.py  utils.py  vespa.py
app/crud/: documents.py  tvtropes.py  vespa.py
app/data/: data_utils.py  dataset.py
app/data/bookcompanion/: convert_epub_to_txt.py  dataset.py  extract_character_list.py  scrape.py
app/data/libgen/: scrape.py
app/data/tvtropes/: config.py  crud.py  models.py  setup.py
app/models/: chat.py  documents.py  embeddings.py  tvtropes.py
app/pipeline/character/: adal.py  config.py  identification.py  train.py
app/utils/: document_processing.py  http.py  jsonl.py  logging.py
app/vespa/: app.py
data/: explore_tvtropes.ipynb
data/reddit_short_stories/: dataset.py  sample.ipynb  tokenize.py
data/tvtropes/: dataset.py  sample.ipynb  tokenize.py
notebooks/: abduction.ipynb  adapter_experiment.ipynb  bertopic.ipynb  chunking.py  cluster_postprocessing.py  clustering.py  create_embeddings.py  embed.ipynb  late_chunking.ipynb  movie_remakes_cluster_ids.npy  movie_remakes_embeddings.npy  movie_remakes_embeddings_low.npy  movie_remakes_query_embeddings.npy  plot_similarity_dataset.ipynb  tvtropes_explore.ipynb  tvtropes_genre_clustering.ipynb
tests/tvtropes/: test_crud.py  test_models.py
utils/: chunking.py  string.py
