[tool.poetry]
name = "narana"
version = "0.1.0"
description = "Goal of this project is to implement novel solutions in the domain of narrative understanding and narrative similarity analysis."
authors = ["Fergons <fergons777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.7"
torch = {version = "^2.5.0+cu124", source = "pytorch-gpu"}
sentence-transformers = "^3.2.1"
pandas = "^2.2.3"
protobuf = "^5.28.3"
sentencepiece = "^0.2.0"
flagembedding = "^1.2.11"
pyvespa = "^0.50.0"
peft = "^0.13.2"
python-dotenv = "^1.0.1"
nltk = "^3.9.1"
pydantic = "^2.9.2"
pytest = "^8.3.3"
instructor = "^1.6.4"
litellm = "^1.52.12"
tqdm = "^4.67.0"
tenacity = "^9.0.0"
orjson = "^3.10.11"
outlines = "^0.1.5"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"
# usage: poetry add --source pytorch-gpu torch torchvision torchaudio


[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[tool.poetry.group.bookcompanion.dependencies]
ebooklib = "^0.18"
libgen-api-enhanced = "^1.0.4"
rapidfuzz = "^3.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
